--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 10px;
   &-heading{
     font-family: Roboto;
     font-size: 24px;
