--- a/idem/css/style.css
+++ b/idem/css/style.css
@@ -110,10 +110,6 @@
           box-sizing: border-box;
 }
 
-.RowRectangleFirst {
-  margin-bottom: 10px;
-}
-
 .rectangleContainer {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -131,7 +127,6 @@
 .grey {
   background-color: #A2A9B7;
   color: white;
-  font-size: 18px;
 }
 
 .wrapper {
@@ -141,7 +136,6 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-top: 10px;
 }
 
 .row {
@@ -163,14 +157,7 @@
   overflow: scroll;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-}
-
-.box-first {
-  margin-bottom: 10px;
-}
-
-.rectangle-first {
-  margin-right: 10px;
+  margin-top: 10px;
 }
 
 .moreno {
@@ -184,7 +171,8 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  height: 64vw;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .boxMini {
@@ -200,6 +188,7 @@
   line-height: 20px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  margin-top: 10px;
 }
 
 .rectangle {
@@ -216,6 +205,7 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   overflow: hidden;
+  margin-top: 10px;
 }
 
 .rectangleBig {
@@ -226,8 +216,10 @@
       -ms-flex-align: end;
           align-items: flex-end;
   width: 64vw;
+  height: 16vw;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  margin-top: 10px;
 }
 
 .lightGrey {
@@ -278,25 +270,20 @@
     height: 66vw;
   }
 
-  .boxMini {
-    width: 32vw;
-    height: 32vw;
-  }
-
   .row {
-    width: 66vw;
-  }
-
-  .moreno {
-    height: 66vw;
+    width: 100%;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 
   .rectangle {
-    width: 32vw;
+    width: 48vw;
+    height: 48vw;
   }
 
   .rectangleBig {
-    width: 66vw;
+    width: 100%;
   }
 
   .changerColumnDirection {
