deleted unused classes

--- a/idem/css/style.css
+++ b/idem/css/style.css
@@ -44,13 +44,14 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: Roboto, sans-serif;
 }
 
 .container {
   margin: 0 2vw;
 }
 
-.changerColumnDirection {
+.column {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -58,19 +59,14 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-.changerRowToColumn {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
+.changerRowToColumn,
 .changerRowToColumnReverse {
+  height: 33vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -84,6 +80,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -99,17 +98,6 @@
           justify-content: space-between;
 }
 
-.rectangleMiniColumn {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
 .rectangleContainer {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -118,15 +106,13 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .roboto {
-  font-family: Roboto;
-}
-
-.grey {
-  background-color: #A2A9B7;
-  color: white;
+  font-family: Roboto, sans-serif;
 }
 
 .wrapper {
@@ -136,6 +122,7 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  margin-top: 10px;
 }
 
 .row {
@@ -154,23 +141,7 @@
   width: 64vw;
   height: 64vw;
   text-align: center;
-  overflow: scroll;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  margin-top: 10px;
-}
-
-.moreno {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  overflow: auto;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -188,7 +159,6 @@
   line-height: 20px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  margin-top: 10px;
 }
 
 .rectangle {
@@ -205,7 +175,6 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   overflow: hidden;
-  margin-top: 10px;
 }
 
 .rectangleBig {
@@ -219,7 +188,6 @@
   height: 16vw;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  margin-top: 10px;
 }
 
 .lightGrey {
@@ -228,6 +196,11 @@
 
 .blue {
   background: #90BCE8;
+}
+
+.grey {
+  background-color: #A2A9B7;
+  color: white;
 }
 
 .yellow {
@@ -257,36 +230,15 @@
 }
 
 @media (max-width: 320px) {
-  .hidden {
-    display: none;
-  }
-
   .container {
     margin: 0;
   }
 
-  .box {
-    width: 66vw;
-    height: 66vw;
+  .hidden {
+    display: none;
   }
 
-  .row {
-    width: 100%;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-
-  .rectangle {
-    width: 48vw;
-    height: 48vw;
-  }
-
-  .rectangleBig {
-    width: 100%;
-  }
-
-  .changerColumnDirection {
+  .reverse {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
         -ms-flex-direction: column-reverse;
@@ -298,6 +250,7 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    height: 100%;
   }
 
   .changerColumnToRow {
@@ -307,10 +260,32 @@
             flex-direction: row;
   }
 
+  .wrapper {
+    margin: 0;
+  }
+
   .changerRowToColumnReverse {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
         -ms-flex-direction: column-reverse;
             flex-direction: column-reverse;
+    height: 100%;
+    margin-top: 10px;
+  }
+
+  .box {
+    width: 66vw;
+    height: 66vw;
+  }
+
+  .rectangle {
+    width: 48vw;
+    height: 48vw;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .rectangleBig {
+    width: 100%;
   }
 }
