--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,53 +5,42 @@
 *{
   margin: 0;
   padding: 0;
+  font-family: Roboto, sans-serif;
 }
 .container{
   margin: 0 2vw;
 }
-.hidden{
-}
-.changerColumnDirection{
+.column{
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
-.changerRowToColumn{
-  display: flex;
-  flex-direction: row;
-}
-.changerRowToColumnReverse{
+.changerRowToColumn, .changerRowToColumnReverse{
+  height: 33vw;
   display: flex;
   flex-direction: row;
 }
 .changerColumnToRow{
   display: flex;
+  justify-content: space-between;
   flex-direction: column;
 }
 .rectangleMiniRow{
   display: flex;
   justify-content: space-between;
 }
-.rectangleMiniColumn{
-  display: flex;
-  justify-content: space-between;
-  box-sizing: border-box;
-}
-.RowRectangleFirst{
-}
 .rectangleContainer{
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 .roboto{
-  font-family: Roboto;
-}
-.grey {
-  background-color: #A2A9B7;
-  color: white;
+  font-family: Roboto, sans-serif;
 }
 .wrapper{
   display: flex;
   justify-content: space-between;
+  margin-top: 10px;
 }
 .row{
   display: flex;
@@ -63,14 +52,7 @@
   width: 64vw;
   height: 64vw;
   text-align: center;
-  overflow: scroll;
-  box-sizing: border-box;
-  margin-top: 10px;
-}
-.moreno{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  overflow: auto;
   box-sizing: border-box;
 }
 .boxMini{
@@ -81,7 +63,6 @@
   font-size: 14px;
   line-height: 20px;
   box-sizing: border-box;
-  margin-top: 10px;
 }
 .rectangle{
   display: flex;
@@ -92,22 +73,23 @@
   line-height: 20px;
   box-sizing: border-box;
   overflow: hidden;
-  margin-top: 10px;
-  &Big{
-    display: flex;
-    align-items: flex-end;
-    width: 64vw;
-    height: 16vw;
-    box-sizing: border-box;
-    margin-top: 10px;
-  }
+}
+.rectangleBig{
+  display: flex;
+  align-items: flex-end;
+  width: 64vw;
+  height: 16vw;
+  box-sizing: border-box;
 }
 .lightGrey{
   background: #E8EBED;
 }
 .blue{
   background: #90BCE8;
-
+}
+.grey {
+  background-color: #A2A9B7;
+  color: white;
 }
 .yellow{
   background: #FEBF26;
@@ -131,37 +113,42 @@
 }
 
 @media (max-width: 320px) {
-  .hidden {
-    display: none;
-  }
   .container{
     margin: 0;
   }
-  .box{
-    width: 66vw;
-    height: 66vw;
+  .hidden{
+    display: none;
   }
-  .row{
-    width: 100%;
-    justify-content: space-between;
-  }
-  .rectangle{
-    width: 48vw;
-    height: 48vw;
-    &Big{
-      width: 100%;
-    }
-  }
-  .changerColumnDirection{
+  .reverse{
     flex-direction: column-reverse;
   }
   .changerRowToColumn{
     flex-direction: column;
+    height: 100%;
   }
   .changerColumnToRow{
     flex-direction: row;
   }
+  .wrapper{
+    margin: 0;
+  }
   .changerRowToColumnReverse{
     flex-direction: column-reverse;
+    height: 100%;
+    margin-top: 10px;
+  }
+  .box {
+    width: 66vw;
+    height: 66vw;
+  }
+
+  .rectangle {
+    width: 48vw;
+    height: 48vw;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  .rectangleBig {
+    width: 100%;
   }
 }
